hphp/test/zend/bad/Zend/tests/magic_methods_003.php
<?php

class foo {	
	static function __unset($a) {
		print "unset\n";
	}
}

?>